6.0
	+ Fix undefined $actualValue warning in ViewCustomizer
	+ Fix unitialized $filter warning in tableBody.mas
	+ Set default size of EBox::Types::Int to 6
	+ Use /etc/apt/auth.conf instead of embedding login info in sources.list
	+ Avoid use of apt-key add installing zentyal-qa pubkey in /etc/apt/trusted.gpg.d
	  as gnupg is no longer installed as dependency
	+ Login page form is now centered in a responsive way
	+ Simplify interpreter code and avoid warnings with HTML::Mason templates
	+ Allow new status field in daemon description to use a different daemon
	  name to check running status
	+ Syntax changes to be compliant with Perl 5.26
	+ Use 5.1-nss repo for NS license keys
	+ Allow offline license key validation
	+ Automatic save changes in license activation after first login
	+ Avoid errors when parsing JSON for dashboard widgets
	+ Force restore of configuration backup from 3.X by using custom script
	+ Adapt nginx conf to allow vncviewer for zentyal-virt
	+ Add zentyal-virt icon
	+ Add support for licenses with unlimited users
5.1.1
	+ Change trial messages to adapt to new 45-day period
	+ Add support for pepertual licenses
5.1
	+ NetWrappers::list_ifaces() now ignores invalid ones like bonding_masters
	+ Reimplement EBox::Validate::isIPInNetwork using NetAddr::IP
	+ Safer management of systemd daemons enabled/disabled status
	+ Add libpam-cap dependency to avoid warnings in auth.log
	+ Avoid uninitialized comparison warnings in zentyal.log regarding
	  EBox::Types::Service and EBox::Types::IPAddr
	+ Use POST method when submitting forms in AJAX requests from dialogs
	+ Pass action to HTMLSetter templates so they can have a different
	  behavior for add and edit
	+ Avoid errors when license file not exist in webadmin restart
	+ Services stop working and activation is required after trial expired
	+ Allow up to 12 dashboard widgets per section instead of 4
	+ Add ftp icon
	+ Rename l2tp package icon to ipsec