@@ -9,13 +9,6 @@
 # this key only applies to virtual machine with system operative set to 'Other'
 #use_ide_disks = yes
 
-# View Console size
-# You can customize the width and height of the built-in VNC console
-# that appears on the Zentyal interface
-# Default size: 800x600
-view_console_width = 800
-view_console_height = 600
-
 # System user who will run the virtualbox machines
 vm_user = ebox
 
@@ -46,4 +39,4 @@ vm_max = 32
 # chmod 600 /var/lib/zentyal/conf/vnc-passwd
 
 # Open noVNC virtual console on a new window
-view_console_new_window = yes
+view_console_new_window = no
