@@ -1,0 +1,1 @@
+nginx-virt.conf /var/lib/zentyal/conf
