@@ -1,0 +1,18 @@
+    location /websockify {
+          proxy_http_version 1.1;
+          proxy_pass https://127.0.0.1:6900/;
+          proxy_set_header Upgrade $http_upgrade;
+          proxy_set_header Connection "upgrade";
+
+          # VNC connection timeout
+          proxy_read_timeout 61s;
+
+          # Disable cache
+          proxy_buffering off;
+    }
+
+    location /vncws {
+          index vnc_auto.html;
+          alias /usr/share/novnc/;
+          try_files $uri $uri/ /vnc_auto.html;
+    }
