@@ -1,10 +1,0 @@
-<%args>
-$listenport
-$vncport
-</%args>
-[Unit]
-Description=Zentyal vncproxy daemon
-
-[Service]
-ExecStart=/usr/bin/websockify --ssl-only --key=/var/lib/zentyal/conf/ssl/ssl.key --cert=/var/lib/zentyal/conf/ssl/ssl.pem --web /usr/share/novnc <% $listenport %> localhost:<% $vncport %>
-Restart=on-failure
