@@ -1,4 +1,5 @@
 6.0
+	+ Simplify VNC management and fix SSL problems
 	+ Remove duplicated call to createInternalNetworks()
 	+ Add support for EFI or Hybrid ISO files
 	+ Adapt to Ubuntu 18.04
