@@ -1,4 +1,5 @@
 6.0
+	+ Simplify nginx.conf includes management
 	+ Fix undefined $actualValue warning in ViewCustomizer
 	+ Fix unitialized $filter warning in tableBody.mas
 	+ Set default size of EBox::Types::Int to 6
